--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@firebase/firestore": "^3.11.0",
+    "@firebase/firestore": "^3.13.0",
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "firebase": "^9.21.0",
+    "firebase": "^9.23.0",
+    "lottie-react": "^2.4.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "typed.js": "^2.0.16",
     "typescript": "5.0.4"
   }
 }
