--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "extract:i18n": "formatjs extract '{pages,components,sections}/**/*.{js,ts,tsx}' --format simple --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file content/locales/en.json",
+    "compile:i18n": "formatjs compile-folder --ast --format simple content/locales content/compiled-locales",
+    "i18n": "pnpm run extract:i18n && pnpm run compile:i18n"
   },
   "dependencies": {
-    "@firebase/firestore": "^3.13.0",
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -23,8 +25,13 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intl": "^6.4.4",
     "tailwindcss": "3.3.2",
     "typed.js": "^2.0.16",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@formatjs/cli": "^6.1.3",
+    "babel-plugin-formatjs": "^10.5.3"
   }
 }
