--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
-  "name": "website-portfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "extract:i18n": "formatjs extract '{pages,components,sections}/**/*.{js,ts,tsx}' --format simple --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file content/locales/en.json",
-    "compile:i18n": "formatjs compile-folder --ast --format simple content/locales content/compiled-locales",
-    "i18n": "pnpm run extract:i18n && pnpm run compile:i18n"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.16.2",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "autoprefixer": "10.4.14",
-    "dotenv": "^16.3.1",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "firebase": "^9.23.0",
+    "@types/animejs": "^3.1.10",
+    "animejs": "^3.2.1",
     "lottie-react": "^2.4.0",
-    "next": "13.3.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-intl": "^6.4.4",
-    "tailwindcss": "3.3.2",
-    "typed.js": "^2.0.16",
-    "typescript": "5.0.4"
+    "next": "13.5.6",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-particles": "^2.12.2",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
-    "@formatjs/cli": "^6.1.3",
-    "babel-plugin-formatjs": "^10.5.3"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
