--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.21",
+    "@nextui-org/react": "^2.1.13",
+    "@nextui-org/system": "^2.0.10",
+    "@nextui-org/theme": "^2.1.9",
     "@types/animejs": "^3.1.10",
-    "animejs": "^3.2.1",
+    "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
     "next": "13.5.6",
     "react": "^18",
