--- a/package.json
+++ b/package.json
@@ -1,37 +1,33 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
+  "name": "my-app",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "predeploy": "expo export -p web",
+    "deploy-hosting": "npm run predeploy && firebase deploy --only hosting",
+    "ts:check": "tsc"
   },
   "dependencies": {
-    "@nextui-org/button": "^2.0.21",
-    "@nextui-org/react": "^2.1.13",
-    "@nextui-org/system": "^2.0.10",
-    "@nextui-org/theme": "^2.1.9",
-    "@types/animejs": "^3.1.10",
-    "framer-motion": "^10.16.4",
-    "lottie-react": "^2.4.0",
-    "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles-engine": "^2.12.0",
-    "tsparticles-slim": "^2.12.0"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo/webpack-config": "^19.0.1",
+    "expo": "~50.0.5",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-web": "~0.19.6",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
-  }
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "private": true
 }
